--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poetic_connect_4",
+  "name": "connect4",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://kochetovM.github.io/connect4",
